# ivantheragingbot

./: .gitignore  README.md  example.env  go.mod  go.sum  ivantheraginbot.py  main.go  main.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: python-package.yml
cmd/ivantheragingbot/: doc.go  main.go
internal/audio/: player.go
internal/bootstrap/: doc.go  wiring.go
internal/bot/: bot.go
internal/chat/application/: chat.go  doc.go
internal/chat/application/terminal/: doc.go  stream.go
internal/chat/infrastructure/twitch/: bot.go  doc.go
internal/config/: config.go  config_test.go  doc.go
internal/logging/: doc.go  logging.go
internal/tts/: gtts.go
internal/voice/application/reader/: doc.go  service.go  service_test.go
internal/voice/application/soundboard/: doc.go  ports.go  service.go
internal/voice/infrastructure/assets/: asset_cache.go  asset_cache_test.go  doc.go
internal/voice/infrastructure/audio/: beep_player.go  doc.go
internal/voice/infrastructure/tts/: doc.go  gtts_client.go
ivantheraginbot/: bot.py  config.py  utils.py
ivantheraginbot/components/: error.py  help.py  sounds.py  speak.py
ivantheraginbot/utils/: tokens.py
ivantheragingbot/: bot.py  config.py  types.py
ivantheragingbot/components/: chat.py  error.py  help.py  sounds.py  speak.py
ivantheragingbot/handlers/: __init__.py  commands.py  errors.py  events.py
ivantheragingbot/utils/: __init__.py  helpers.py  tokens.py
tests/: conftest.py  test_messages.py
tests/fixtures/: __init__.py
